tests/fixtures/invalid/var_undefined.wks
# Test undefined variable error
a "Test" +write %{{echo %(undefined_var)}}
